# need_4_fruits

./: .gitignore  Cargo.toml  README.md  bate_papo.rs  run_script.sh
src/: common_components.rs  common_systems.rs  controls.rs  fruit_plugin.rs  main.rs  osu_reader.rs  player_plugin-bck.rs  player_plugin.rs  ui_plugin.rs
src/game/: beatmap_plugin.rs  common_systems.rs  controls.rs  fruit_plugin.rs  mod.rs  osu_reader.rs  player_plugin.rs  ui_plugin.rs
src/game/pause_menu/: mod.rs
